<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Comunicación entre actividades</string>
    <string name="actividad2">Actividad 2</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="telefono">Teléfono</string>
    <string name="email">E-mail</string>
    
    <string name="enviar">Enviar</string>
    <string name="reiniciar">Reiniciar</string>    
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    
</resources>
